# mcp-guard

./: .gitignore  LEADERBOARD.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: blog.html  spec.md
src/mcp_guard/: __init__.py  cli.py  fuzzer.py  payloads.py  report.py  scanner.py  transport.py
tests/: test_fuzzer.py  test_payloads.py  test_scanner.py
