[project]
name = "mcp-guard"
version = "0.1.0"
description = "MCP Server Security Scanner — audit MCP endpoints against OWASP Agentic Top 10"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
mcp-guard = "mcp_guard.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
